# misc-cuda

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
binary-tiles/: CMakeLists.txt  README.md  claude.cu  cpu_reference.h  largestSquareWavefront  test_wavefront.cu  wavefront.cu  wavefront.h
scripts/: cpp_format.sh  cuda_format.sh  python_format.sh
src/: Makefile  copy.cu  triton_copy.py  util.cu
